# zapme

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: 2026-04-25-posture-detection-design.md
.llm/: documentation.MD  llm.MD
data/: eric_session_01.parquet  eric_session_02.parquet  eric_session_03.parquet  eric_session_04.parquet  eric_session_05.parquet  eric_session_06.parquet
models/: slouch_cnn.onnx
scripts/: collect_dataset.py  demo_classifier.py  demo_pose.py  dry_run.py  install_systemd.sh  live_test.py  train_classifier.py  train_classifier.slurm  yolo_view.py  zapme.service
tests/: test_debouncer.py  test_escalator.py  test_features.py  test_gate.py  test_pulser.py  test_speaker.py  test_tens_control.py  test_watchdog.py
zapme/: __init__.py
zapme/assets/: README.md
zapme/docs/: math_homework.html
zapme/src/: __init__.py  __main__.py
zapme/src/model/: __init__.py  _common.py  classifier.py  features.py  vision.py
zapme/src/runtime/: __init__.py  feature_buffer.py  gate.py  loop.py  watchdog.py
zapme/src/utils/: __init__.py  inout.py  tens_control.py
