[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zapme"
version = "0.0.1"
description = "Vision-driven posture corrector for Raspberry Pi 4 (Hack AZ 2026)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

# Pi-runtime dependencies only. Anything used solely for training the
# slouch classifier or for developer tooling lives in `optional-dependencies`
# below so the Pi install (`pip install -e .[pi]`) stays lean.
dependencies = [
  "huggingface_hub",  # downloads the YOLO pose checkpoint on first run
  "numpy",
  "onnxruntime",      # slouch-classifier inference
  "opencv-python",    # camera capture
  "ultralytics",      # YOLO pose (transitively pulls torch, pillow, etc.)
  "pandas",           # ffill/bfill in clean_feature_window
]

[project.optional-dependencies]
# Install on the Pi: pip install -e .[pi]
# Only resolves on Linux aarch64 (Raspberry Pi OS 64-bit).
pi = [
  # gpiozero is pure Python and pip-installs cleanly. lgpio is NOT
  # listed here on purpose: on Raspberry Pi OS Bookworm, pip falls
  # back to building lgpio from source (needs SWIG + a multiarch gcc
  # symlink that's often missing even with build-essential). The
  # supported path is `sudo apt install -y python3-lgpio` and a venv
  # created with `--system-site-packages` so the venv can see the
  # apt-installed binding. See README / live_test.py docstrings.
  "gpiozero;  sys_platform == 'linux'",
]

# Install on a desktop / HPC for training: pip install -e .[train]
# Adds the model-training and ONNX-export stack on top of the runtime deps.
train = [
  "torch",
  "torchvision",
  "transformers",
  "datasets",
  "bitsandbytes",
  "onnx",
  "pyarrow",
]

# Install for development: pip install -e .[dev]
dev = [
  "pytest",
  "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["zapme*"]

[tool.ruff]
line-length = 100
target-version = "py311"
